# axel

./: .codecov.yml  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  docker-compose-mock.yml  llms.txt  pyproject.toml  repos.txt  requirements.txt
.axel/hillclimb/: config.yml  repos.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: 03-docs.yml  (+6 more)
axel/: __init__.py  cli.py  completions.py  config.py  critic.py  discord_bot.py  flywheel.py  merge.py  quests.py  repo_manager.py  task_manager.py  token_place.py  utils.py
dict/: allow.txt
docs/: FAQ.md  HILLCLIMB.md  KNOWN_ISSUES.md  LOCAL_AGENT_PROMPT.md  RELEASE-READINESS-DASHBOARD.md  RELEASE_NOTES.md  ROTATING_TOKENS.md  THREAT_MODEL.md  discord-bot.md  merge_policy.md  polish-plan.md  prompts-codex-ci-fix.md  prompts-codex-spellcheck.md  prompts-codex.md
issues/: 0001-private-local-dirs.md  0002-token-place-flywheel.md  0003-gabriel-security-layer.md  0004-flywheel-template.md  0005-discord-bot-ingest.md  0006-roadmap-fetch-repos.md
scripts/: build_stl.sh  scan-secrets.py
tests/: test_cli.py  test_config.py  test_critic.py  test_discord_bot.py  test_flywheel.py  test_hillclimb_script.py  test_hillclimb_skip.py  test_init.py  test_llms_txt.py  test_merge.py  test_quests.py  test_readme.py  test_release_readiness.py  test_release_readiness_dashboard.py  test_repo_manager.py  test_scan_secrets.py  test_task_manager.py  test_token_place.py  test_utils.py  test_utils_bytearray.py  test_utils_memoryview.py
(+22 files in other folders)
