[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "axel"
version = "0.1.0"
description = "Personal repository tracker used by LLM assistants"
readme = "README.md"
authors = [{ name = "futuroptimist" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["requests"]
packages = ["axel"]

[project.urls]
Homepage = "https://github.com/futuroptimist/axel"
