[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "axel"
version = "0.1.0"
description = "Personal repository tracker used by LLM assistants"
readme = "README.md"
authors = [{ name = "futuroptimist" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "cryptography==42.0.8",
    "requests==2.32.5",
]

[project.scripts]
axel-repo = "axel.repo_manager:main"
axel-task = "axel.task_manager:main"

[project.urls]
Homepage = "https://github.com/futuroptimist/axel"

[tool.setuptools]
packages = {find = {include = ["axel"]}}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
